# DuaBakes

./: .dockerignore  .gitignore  DNS_SETUP.md  Dockerfile  Login.css  Login.html  Navbar.css  Navbar.html  PROJECT_OVERVIEW.md  QUICKSTART.md  REACT_SETUP.md  README.md  README_RENDER.md  SUPPORT_BREVO.md  adminlogin.html  api.js  bakes_fallback.db  chat_bot.py  db_ops.py  db_schema.sql  index sample.css  index sample.html  index.css  index.html  index.js  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  signup.css  signup.html  vite.config.js  vitest.config.js
scripts/: convert_products_to_json.js  seed_products_to_api.py  sync_products_from_api.py  test_signup.py
src/: App.css  App.jsx  index.css
src/components/: Categories.jsx  Chatbot.jsx  ErrorBoundary.jsx  Hero.jsx  Navbar.jsx  ProductList.jsx
src/data/: products.js
src/pages/: About.jsx  AdminDashboard.jsx  Cart.jsx  Contact.jsx  ForgotPassword.jsx  Home.jsx  Login.jsx  Orders.jsx  Payment.jsx  ProductDetail.jsx  Profile.jsx  ResetPassword.jsx  Settings.jsx  Signup.jsx  TrackOrder.jsx  VerifyOtp.jsx
src/services/: api.js
src/styles/: Auth.css  Categories.css  Chatbot.css  Hero.css  Home.css  Navbar.css  Payment.css  ProductList.css  cart.css
src/tests/: ErrorBoundary.test.jsx
tests/: test_admin_order_tracking.py  test_order_notification.py  test_password_hashing.py
